[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/Results.gd" id="1"]

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.0431373, 0.0901961, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1

[node name="SummaryLabel" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Level: 1   Score: 0   High: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Center/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(220, 48)
text = "Restart"

[node name="MenuButton" type="Button" parent="Center/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(220, 48)
text = "Menu"

[connection signal="pressed" from="Center/VBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Center/VBox/MenuButton" to="." method="_on_menu_button_pressed"]
